--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-links": "^5.2.8",
     "@storybook/addons": "^5.2.8",
+    "@storybook/preset-create-react-app": "^1.5.0",
     "@storybook/react": "^5.2.8",
     "@testing-library/react-hooks": "^3.2.1",
     "react-test-renderer": "^16.12.0",
